--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <hr>
     <table cellspacing="20">
         <tr>
-            <td> <img src="Images/gauhar.png" alt="FAMILY PROFILE PICTURE" width="200" height="200"></td>
+            <td> <img src="gauhar.png" alt="FAMILY PROFILE PICTURE" width="200" height="200"></td>
             <td> <h1>GAUHAR NAWAB</h1>
                 <p><em>This is my <strong>Portfolio</strong> </em></p>
                 <p>AT <strong> PO SIKANDARPUR</strong> Siwan,Bihar</p></td>
